Skip to content
GitLab
Projects
Groups
Snippets
/
Help
Help
Support
Community forum
Keyboard shortcuts
?
Submit feedback
Contribute to GitLab
Register
Sign in
Toggle navigation
Menu
Open sidebar
GNOME
mutter
Issues
#1668
Closed
Open
Issue created
Feb 26, 2021
by
José M. Sarasola
@alosarjos
Crash when clicking below titlebar of tiled unfocused window
Affected version
Arch Linux x64
Gnome Shell 3.38.3 / Wayland
5.11.1-zen1-1-zen
Bug summary
Gnome Shell crashed
Steps to reproduce
Happened while watching a Twitch.tv stream
Relevant logs, screenshots, screencasts etc.
gnome_crash.log
Edited
Feb 26, 2021
by
Sebastian Keller